--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "lodash": "^4.17.21"
+        "chart.js": "^4.4.0",
+        "dayjs": "^1.11.10",
+        "lodash": "^4.17.21",
+        "react-chartjs-2": "^5.2.0"
     }
 }
